[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gengine"
dynamic = ["version"]
description = "Engine for piping generators"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["generator", "pipeline", "workflow", "engine", "stream", "data"]
authors = [
  { name = "m-birke", email = "wesci@web.de" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/m-birke/gengine#readme"
Issues = "https://github.com/m-birke/gengine/issues"
Source = "https://github.com/m-birke/gengine"

[tool.hatch.version]
path = "src/gengine/__about__.py"

[tool.hatch.envs.default]
path = "./.hatch/default"

[tool.hatch.envs.types]
path = "./.hatch/types"
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/gengine tests}"

[tool.coverage.run]
source_pkgs = ["gengine", "tests"]
branch = true
parallel = true
omit = [
  "src/gengine/__about__.py",
]

[tool.coverage.paths]
gengine = ["src/gengine", "*/gengine/src/gengine"]
tests = ["tests", "*/gengine/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
